all translatoins added, comments, and small refactor, proptpes added as well

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       noclose: false
     };
 
+    // Develop options
     function $buo_f() {
       var e = document.createElement("script");
       e.src = "//browser-update.org/update.min.js";
